# video-inspect

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  audio_client.cpp  audio_client.hpp  main.cpp  peak_image.cpp  peak_image.hpp  video_reader.cpp  video_reader.hpp
src/data_types/: CMakeLists.txt  ring_buffer.cpp  ring_buffer.hpp
